--- a/slidesdef.sty
+++ b/slidesdef.sty
@@ -4,6 +4,7 @@
 \usepackage{multirow}
 \usepackage{algpseudocode}
 \usepackage[numbers]{natbib}
+\usepackage{listings}
 \usepackage{epsfig}
 \usepackage{tikz}
 \usepackage{pgfplots}
