--- a/user.sty
+++ b/user.sty
@@ -1,17 +1,17 @@
 \pttrue
 %\ptfalse
 
-\newcommand{\titulo}{Título}
-\newcommand{\evento}{Evento}
-\newcommand{\autor}{Autor}
-\newcommand{\colabum}{Colaborador um}
+\newcommand{\titulo}{Ferramentas Computacionais para Computação Científica}
+\newcommand{\evento}{VII Simpósio de Análise Numérica e Otimização}
+\newcommand{\autor}{Abel Soares Siqueira}
+%\newcommand{\colabum}{Colaborador um}
 %\newcommand{\colabdois}{Colaborador dois}
 %\newcommand{\colabtres}{Colaborador tres}
 %\newcommand{\colabquatro}{Colaborador quatro}
-\newcommand{\instautor}{Universidade Fictícia}
-\newcommand{\instcolabum}{Universidade Fictícia}
+\newcommand{\instautor}{Universidade Federal do Paraná}
+%\newcommand{\instcolabum}{Universidade Fictícia}
 %\newcommand{\instcolabdois}{Universidade Fictícia}
 %\newcommand{\instcolabtres}{Universidade Fictícia}
 %\newcommand{\instcolabquatro}{Universidade Fictícia}
-\newcommand{\data}{03 de Outubro de 2014}
+\newcommand{\data}{24 de Fevereiro de 2015}
 \newcommand{\thanksmsg}{\ifpt{Obrigado}\else{Thanks}\fi}
