Adiciona slides sobre software carpentry

--- a/body.tex
+++ b/body.tex
@@ -365,6 +365,27 @@ julia> (f,c)
 }
 
 \myframe{
+  \ctr{\includegraphics[scale=0.3]{assets/sc.png}}
+  \begin{itemize}
+    \item Uma organização sem fins lucrativos cujos membros ensinam
+      softwares para pesquisadores.
+    \item Faz workshops no mundo todo; fornece material de ensino de
+      acesso aberto; e tem o programa de treinamento para instrutores.
+    \item Principais assuntos: Shell, Python, R, Git, GitHub, SQL.
+  \end{itemize}
+}
+
+\myframe{
+  \ctr{\includegraphics[scale=0.3]{assets/sc.png}}
+  \begin{itemize}
+    \item Existe um custo administrativo, mais o custo de transporte e
+      acomodação.
+    \item No Brasil, o instrutor é o Raniere Silva.
+    \item \url{http://www.catarse.me/pt/programacaocientifica}.
+  \end{itemize}
+}
+
+\myframe{
   \ctr{\LaTeX: TikZ e PgfPlots}
   \begin{itemize}
     \item {\bf PGF} ({\bf P}ortable {\bf G}raphics {\bf F}ormat)
