--- a/user.sty
+++ b/user.sty
@@ -1,7 +1,7 @@
 \pttrue
 %\ptfalse
 
-\newcommand{\titulo}{Ferramentas Computacionais para Computação Científica}
+\newcommand{\titulo}{Ferramentas Computacionais para Pesquisadores}
 \newcommand{\evento}{VII Simpósio de Análise Numérica e Otimização}
 \newcommand{\autor}{Abel Soares Siqueira}
 %\newcommand{\colabum}{Colaborador um}
